# wow_retail/wow_api_java/src/main/java/fr/jbwittner/blizzardswagger/wowretailapi/model/AssetData.java
@@ -2,7 +2,7 @@
  * Swagger BLIZZARD Api
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document: 0.4.1
+ * The version of the OpenAPI document: 0.5.0
  * Contact: jeanbaptiste.wittner@outlook.com
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -29,13 +29,21 @@ import java.net.URI;
  * Asset of media
  */
 @ApiModel(description = "Asset of media")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2021-08-11T00:02:08.408565+02:00[Europe/Paris]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2021-08-22T18:57:03.260882+02:00[Europe/Paris]")
 public class AssetData {
   /**
    * Type of media
    */
   @JsonAdapter(KeyEnum.Adapter.class)
   public enum KeyEnum {
+    AVATAR("avatar"),
+    
+    INSET("inset"),
+    
+    MAIN("main"),
+    
+    MAIN_RAW("main-raw"),
+    
     ICON("icon");
 
     private String value;
